# python-library-base

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  README_TEMPLATE.md  azure-pipelines.yml  bootstrap.py  init.sh  requirements-test.txt  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/___library_name___/: ___library_name___.rst  modules.rst
tests/: cli_test.py
