[metadata]
name = library
version = 0.1.0
author = Aleksa Ćuković
author_email = aleksacukovic1@gmail.com
description = Python base library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleksaC/python-library-base
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
