[metadata]
name = library
version = 0.0.1
author = Aleksa Ćuković
author_email = aleksacukovic1@gmail.com
description = Python base library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AleksaC/python-library-base
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    library = library.cli:main

[options.packages.find]
exclude =
    tests*
