[metadata]
name = library_name
version = attr: ___library_name___.__version__
description = ___description___
long_description = file: README.md
long_description_content_type = text/markdown
url = ___url___
author = ___author_name___
author_email = ___author_email___
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    ___library_name___ = ___library_name___.cli:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
